package com.limatisoft.base.ui.gui;

import com.limatisoft.gui.swing.components.FormToolbarPanel;

public class ProductFormToolbarPanel extends FormToolbarPanel{
	private static final long serialVersionUID = 1L;

	public ProductFormToolbarPanel() {
		super();
	}
}
